--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
-
 {
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
-    "react": "^16.13.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
+    "react": "^18.2.0",
     "react-animated-weather": "^4.0.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
     "react-geolocated": "^3.0.1",
     "react-live-clock": "^4.0.5",
-    "react-scripts": "3.4.1",
+    "react-scripts": "5.0.1",
     "react-skycons": "^0.7.0",
     "skycons": "^1.0.0"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
