Update Node.js engine to 22.x for Vercel build + add vercel config

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-# Fix for OpenSSL error
-NODE_OPTIONS=--openssl-legacy-provider
-
-# Your weather API key (replace with your real key)
-REACT_APP_API_KEY=I9JU23NF394R6HH
+REACT_APP_WEATHER_API_KEY=a18156525bba530a50ea4104d300022b
+REACT_APP_API_BASE=https://api.openweathermap.org/data/2.5/
