--- a/.vercel.json
+++ b/.vercel.json
@@ -12,10 +12,10 @@
   "framework": "create-react-app",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "env": {
-    "NODE_ENV": "production"
-  },
   "installCommand": "npm install --legacy-peer-deps",
   "nodeVersion": "22.x",
-  "ignoreCommand": "echo 'Skipping files listed in .vercelignore'"
+  "env": {
+    "NODE_ENV": "production",
+    "CI": "false"
+  }
 }
