--- a/.vercel.json
+++ b/.vercel.json
@@ -4,18 +4,16 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "config": { "distDir": "build" }
     }
   ],
   "framework": "create-react-app",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
+  "env": {
+    "NODE_ENV": "production"
+  },
   "installCommand": "npm install --legacy-peer-deps",
   "nodeVersion": "22.x",
-  "env": {
-    "NODE_ENV": "production",
-    "CI": "false"
-  }
+  "ignoreCommand": "echo 'Skipping files listed in .vercelignore'"
 }
