--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
-    "react-geolocated": "^3.0.1",
-    "react-live-clock": "^4.0.5",
+    "react-live-clock": "^6.1.25",
     "react-scripts": "5.0.1",
     "react-skycons": "^0.7.0",
     "skycons": "^1.0.0"
