Add react-scripts to dependencies

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-live-clock": "^6.1.25",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-skycons": "^0.7.0",
     "skycons": "^1.0.0"
   },
